--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "scrollreveal": "^4.0.9",
+    "styled-components": "^6.1.8",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
