--- a/package.json
+++ b/package.json
@@ -16,24 +16,26 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^1.9.7",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.20.0",
+    "react-tooltip": "^5.26.4",
     "scrollreveal": "^4.0.9",
-    "styled-components": "^6.1.8",
-    "tailwindcss": "^3.3.5"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/scrollreveal": "^0.0.11",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.0.0"
   }
 }
