--- a/package.json
+++ b/package.json
@@ -15,14 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.3",
-    "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
     "react-router-dom": "^6.20.0",
     "react-tooltip": "^5.26.4",
-    "scrollreveal": "^4.0.9",
-    "styled-components": "^6.1.8"
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
