--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tabler/icons-react": "^3.14.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
+    "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.20.0",
     "react-tooltip": "^5.26.4",
     "scrollreveal": "^4.0.9",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -37,5 +42,10 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.0.0"
-  }
+  },
+  "description": "This is a portfolio site built using React, Tailwind, and Styled-components. It showcases my projects and skills as a web developer.",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC",
+  "keywords": []
 }
